[tool.poetry]
name = "gude-pdu-read"
version = "0.1.0"
description = ""
authors = ["Maxim Izergin <maxim.izergin@infoss.no>"]
readme = "README.md"
packages = [{include = "gude_pdu_read"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

